--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -60,13 +60,35 @@ jobs:
           CODEDEPLOY_ROLE_ARN: ${{ secrets.CODEDEPLOY_ROLE_ARN }}
         run: |
           echo "container_image = \"$IMAGE_URI\"" > image.auto.tfvars
-          echo "execution_role_arn = \"$EXECUTION_ROLE_ARN\"" >> image.auto.tfvars
-          echo "task_role_arn = \"$TASK_ROLE_ARN\"" >> image.auto.tfvars
-          echo "codedeploy_role_arn = \"$CODEDEPLOY_ROLE_ARN\"" >> image.auto.tfvars
-          echo "app_keys = \"$APP_KEYS\"" >> image.auto.tfvars
-          echo "jwt_secret = \"$JWT_SECRET\"" >> image.auto.tfvars
-          echo "admin_jwt_secret = \"$ADMIN_JWT_SECRET\"" >> image.auto.tfvars
-          echo "api_token_salt = \"$API_TOKEN_SALT\"" >> image.auto.tfvars
+
+          echo 'execution_role_arn = <<EOF' >> image.auto.tfvars
+          echo "$EXECUTION_ROLE_ARN" >> image.auto.tfvars
+          echo 'EOF' >> image.auto.tfvars
+
+          echo 'task_role_arn = <<EOF' >> image.auto.tfvars
+          echo "$TASK_ROLE_ARN" >> image.auto.tfvars
+          echo 'EOF' >> image.auto.tfvars
+
+          echo 'codedeploy_role_arn = <<EOF' >> image.auto.tfvars
+          echo "$CODEDEPLOY_ROLE_ARN" >> image.auto.tfvars
+          echo 'EOF' >> image.auto.tfvars
+
+          echo 'app_keys = <<EOF' >> image.auto.tfvars
+          echo "$APP_KEYS" >> image.auto.tfvars
+          echo 'EOF' >> image.auto.tfvars
+
+          echo 'jwt_secret = <<EOF' >> image.auto.tfvars
+          echo "$JWT_SECRET" >> image.auto.tfvars
+          echo 'EOF' >> image.auto.tfvars
+
+          echo 'admin_jwt_secret = <<EOF' >> image.auto.tfvars
+          echo "$ADMIN_JWT_SECRET" >> image.auto.tfvars
+          echo 'EOF' >> image.auto.tfvars
+
+          echo 'api_token_salt = <<EOF' >> image.auto.tfvars
+          echo "$API_TOKEN_SALT" >> image.auto.tfvars
+          echo 'EOF' >> image.auto.tfvars
+
 
       - name: Terraform Plan
         if: ${{ github.event.inputs.action == 'apply' }}
