--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -76,25 +76,6 @@ jobs:
         if: ${{ github.event.inputs.action == 'apply' }}
         run: terraform apply -auto-approve
 
-      - name: Trigger AWS CodeDeploy Deployment
-        if: ${{ github.event.inputs.action == 'apply' }}
-        run: |
-          echo "Triggering CodeDeploy deployment..."
-          DEPLOYMENT_ID=$(aws deploy create-deployment \
-            --application-name rohana-strapi-codedeploy-app \
-            --deployment-group-name rohana-strapi-deployment-group \
-            --deployment-config-name CodeDeployDefault.ECSCanary10Percent5Minutes \
-            --description "Blue/Green deployment triggered from GitHub Actions" \
-            --file-exists-behavior OVERWRITE \
-            --github-location repository=${{ github.repository }},commitId=${{ github.sha }} \
-            --deployment-style deploymentType=BLUE_GREEN,deploymentOption=WITH_TRAFFIC_CONTROL \
-            --output text --query "deploymentId")
-
-          echo "Deployment ID: $DEPLOYMENT_ID"
-          echo "Waiting for deployment to finish..."
-
-          aws deploy wait deployment-successful --deployment-id $DEPLOYMENT_ID
-
       - name: Terraform Destroy
         if: ${{ github.event.inputs.action == 'destroy' }}
         run: terraform destroy -auto-approve
@@ -103,6 +84,7 @@ jobs:
           TF_VAR_jwt_secret: ${{ secrets.JWT_SECRET }}
           TF_VAR_app_keys: ${{ secrets.APP_KEYS }}
           TF_VAR_api_token_salt: ${{ secrets.API_TOKEN_SALT }}
-          TF_VAR_container_image: "dummy"  #dummy image to pass validation
+          TF_VAR_container_image: "dummy"
           TF_VAR_execution_role_arn: ${{ secrets.EXECUTION_ROLE_ARN }}
           TF_VAR_task_role_arn: ${{ secrets.TASK_ROLE_ARN }}
+
