--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Determine Image URI
         if: ${{ github.event.inputs.action == 'apply' }}
         run: |
-          IMAGE_TAG="${{ github.event.inputs.image_tag || github.sha }}"
+          IMAGE_TAG="${{ github.event.inputs.image_tag || 'latest' }}"
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
           echo "IMAGE_URI=${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG" >> $GITHUB_ENV
 
@@ -93,8 +93,7 @@ jobs:
               "appSpecContent": {
                 "content": "version: 1\nResources:\n  - TargetService:\n      Type: AWS::ECS::Service\n      Properties:\n        TaskDefinition: '$IMAGE_URI'\n        LoadBalancerInfo:\n          ContainerName: rohana-strapi\n          ContainerPort: 1337"
               }
-            }' \
-            --file-exists-behavior DISALLOW
+            }'
 
       - name: Terraform Destroy
         if: ${{ github.event.inputs.action == 'destroy' }}
