--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Determine Image URI
         if: ${{ github.event.inputs.action == 'apply' }}
         run: |
-          IMAGE_TAG="${{ github.event.inputs.image_tag || github.sha }}"
+          IMAGE_TAG="${{ github.event.inputs.image_tag || 'latest' }}"
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
           echo "IMAGE_URI=${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG" >> $GITHUB_ENV
 
@@ -80,27 +80,22 @@ jobs:
         if: ${{ github.event.inputs.action == 'apply' }}
         run: terraform apply -auto-approve
 
-      - name: Generate appspec.json
+      - name: Get Latest Task Definition
         if: ${{ github.event.inputs.action == 'apply' }}
+        id: get_taskdef
         run: |
-          cat <<EOF > appspec.json
-{
-  "revisionType": "AppSpecContent",
-  "appSpecContent": {
-    "content": "version: 1\nResources:\n  - TargetService:\n      Type: AWS::ECS::Service\n      Properties:\n        TaskDefinition: \"$IMAGE_URI\"\n        LoadBalancerInfo:\n          ContainerName: rohana-strapi\n          ContainerPort: 1337"
-  }
-}
-EOF
+          TASK_DEF_ARN=$(aws ecs describe-services --cluster $ECS_CLUSTER_NAME --services $ECS_SERVICE_NAME --query "services[0].taskDefinition" --output text)
+          echo "TASK_DEF_ARN=$TASK_DEF_ARN" >> $GITHUB_ENV
 
       - name: Trigger CodeDeploy Deployment
         if: ${{ github.event.inputs.action == 'apply' }}
         run: |
-          echo "Using IMAGE_URI: $IMAGE_URI"
+          echo "Using Task Definition ARN: $TASK_DEF_ARN"
           aws deploy create-deployment \
             --application-name "$CODEDEPLOY_APP_NAME" \
             --deployment-group-name "$CODEDEPLOY_GROUP_NAME" \
             --deployment-config-name CodeDeployDefault.ECSCanary10Percent5Minutes \
-            --revision file://appspec.json
+            --revision "revisionType=AppSpecContent,appSpecContent={\"content\":\"version: 1\\nResources:\\n  - TargetService:\\n      Type: AWS::ECS::Service\\n      Properties:\\n        TaskDefinition: $TASK_DEF_ARN\\n        LoadBalancerInfo:\\n          ContainerName: rohana-strapi\\n          ContainerPort: 1337\"}"
 
       - name: Terraform Destroy
         if: ${{ github.event.inputs.action == 'destroy' }}
