--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -90,17 +90,30 @@ jobs:
             --query "services[0].taskDefinition" \
             --output text)
           echo "TASK_DEF_ARN=$TASK_DEF_ARN" >> $GITHUB_ENV
-          echo "TASK_DEF_ARN=$TASK_DEF_ARN" # just for logging
+          echo "TASK_DEF_ARN=$TASK_DEF_ARN"
 
       - name: Trigger CodeDeploy Deployment
         if: ${{ github.event.inputs.action == 'apply' }}
         run: |
           echo "Triggering CodeDeploy deployment with TaskDefinition: $TASK_DEF_ARN"
-          aws deploy create-deployment \
-            --application-name $CODEDEPLOY_APP_NAME \
-            --deployment-group-name $CODEDEPLOY_GROUP_NAME \
-            --deployment-config-name CodeDeployDefault.ECSCanary10Percent5Minutes \
-            --revision revisionType=AppSpecContent,appSpecContent="{\"content\":\"version: 1\\nResources:\\n  - TargetService:\\n      Type: AWS::ECS::Service\\n      Properties:\\n        TaskDefinition: $TASK_DEF_ARN\\n        LoadBalancerInfo:\\n          ContainerName: rohana-strapi\\n          ContainerPort: 1337\"}"
+
+          JSON_PAYLOAD=$(cat <<EOF
+{
+  "applicationName": "${{ env.CODEDEPLOY_APP_NAME }}",
+  "deploymentGroupName": "${{ env.CODEDEPLOY_GROUP_NAME }}",
+  "deploymentConfigName": "CodeDeployDefault.ECSCanary10Percent5Minutes",
+  "revision": {
+    "revisionType": "AppSpecContent",
+    "appSpecContent": {
+      "content": "version: 1\nResources:\n  - TargetService:\n      Type: AWS::ECS::Service\n      Properties:\n        TaskDefinition: $TASK_DEF_ARN\n        LoadBalancerInfo:\n          ContainerName: rohana-strapi\n          ContainerPort: 1337"
+    }
+  }
+}
+EOF
+)
+
+          echo "$JSON_PAYLOAD" > deployment.json
+          aws deploy create-deployment --cli-input-json file://deployment.json
 
       - name: Terraform Destroy
         if: ${{ github.event.inputs.action == 'destroy' }}
