--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,9 +35,6 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
 
-      - name: Install jq
-        run: sudo apt-get update && sudo apt-get install -y jq
-
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -50,8 +47,7 @@ jobs:
         run: |
           IMAGE_TAG="${{ github.event.inputs.image_tag || 'latest' }}"
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
-          IMAGE_URI="${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPOSITORY}:$IMAGE_TAG"
-          echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
+          echo "IMAGE_URI=${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG" >> $GITHUB_ENV
 
       - name: Terraform Init
         run: terraform init
@@ -89,8 +85,8 @@ jobs:
         id: taskdef
         run: |
           TASK_DEF_ARN=$(aws ecs describe-services \
-            --cluster "$ECS_CLUSTER_NAME" \
-            --services "$ECS_SERVICE_NAME" \
+            --cluster $ECS_CLUSTER_NAME \
+            --services $ECS_SERVICE_NAME \
             --query "services[0].taskDefinition" \
             --output text)
           echo "TASK_DEF_ARN=$TASK_DEF_ARN" >> $GITHUB_ENV
@@ -99,32 +95,13 @@ jobs:
       - name: Trigger CodeDeploy Deployment
         if: ${{ github.event.inputs.action == 'apply' }}
         run: |
-          CONTENT=$(jq -n \
-            --arg taskDef "$TASK_DEF_ARN" \
-            '{
-              version: 1,
-              Resources: [
-                {
-                  TargetService: {
-                    Type: "AWS::ECS::Service",
-                    Properties: {
-                      TaskDefinition: $taskDef,
-                      LoadBalancerInfo: {
-                        ContainerName: "rohana-strapi",
-                        ContainerPort: 1337
-                      }
-                    }
-                  }
-                }
-              ]
-            }')
-
+          TASK_DEF_ARN=${{ steps.taskdef.outputs.task_def_arn }}
+          
           aws deploy create-deployment \
-            --application-name "$CODEDEPLOY_APP_NAME" \
-            --deployment-group-name "$CODEDEPLOY_GROUP_NAME" \
-            --deployment-config-name CodeDeployDefault.ECSCanary10Percent5Minutes \
-            --revision "revisionType=AppSpecContent,appSpecContent={content=$CONTENT}" \
-            --description "Deployment via GitHub Actions"
+            --application-name "${CODEDEPLOY_APP_NAME}" \
+            --deployment-group-name "${CODEDEPLOY_GROUP_NAME}" \
+            --deployment-config-name "CodeDeployDefault.ECSCanary10Percent5Minutes" \
+            --revision "revisionType=AppSpecContent,appSpecContent={\"content\":\"version: 1\\nResources:\\n  - TargetService:\\n      Type: AWS::ECS::Service\\n      Properties:\\n        TaskDefinition: ${TASK_DEF_ARN}\\n        LoadBalancerInfo:\\n          ContainerName: rohana-strapi\\n          ContainerPort: 1337\"}"
 
       - name: Terraform Destroy
         if: ${{ github.event.inputs.action == 'destroy' }}
