--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -92,11 +92,32 @@ jobs:
 
           echo "Using TASK_DEF_ARN: $TASK_DEF_ARN"
 
+          APP_SPEC=$(cat <<EOF
+{
+  "version": 1,
+  "Resources": [
+    {
+      "TargetService": {
+        "Type": "AWS::ECS::Service",
+        "Properties": {
+          "TaskDefinition": "$TASK_DEF_ARN",
+          "LoadBalancerInfo": {
+            "ContainerName": "rohana-strapi",
+            "ContainerPort": 1337
+          }
+        }
+      }
+    }
+  ]
+}
+EOF
+)
+
           aws deploy create-deployment \
             --application-name "$CODEDEPLOY_APP_NAME" \
             --deployment-group-name "$CODEDEPLOY_GROUP_NAME" \
             --deployment-config-name CodeDeployDefault.ECSCanary10Percent5Minutes \
-            --revision "revisionType=AppSpecContent,appSpecContent={content=\"version: 1\\nResources:\\n  - TargetService:\\n      Type: AWS::ECS::Service\\n      Properties:\\n        TaskDefinition: $TASK_DEF_ARN\\n        LoadBalancerInfo:\\n          ContainerName: rohana-strapi\\n          ContainerPort: 1337\"}"
+            --revision "revisionType=AppSpecContent,appSpecContent={\"content\":$(echo \"$APP_SPEC\" | jq -Rs .)}"
 
       - name: Terraform Destroy
         if: ${{ github.event.inputs.action == 'destroy' }}
